work experience cards done

--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
     <div class="flex flex-col items-center">
       <div class="flex flex-col items-center">
         <img src="img/PrashantKurlekarAvatar-2008.jpg" alt="Prashant Kurlekar" class="rounded-2xl shadow-2xl mt-4 h-48 md:h-60">
-        <!-- <h3>Prashant Kurlekar</h3> -->
+        <h3 class="text-lg pt-2">Prashant Kurlekar</h3>
       </div>
-      <div class="pt-4">
-        <h4>Frontend / Full Stack(.NET)</h4>
-      </div>
+      <h4>Frontend / Full Stack(.NET)</h4>
     </div>
   </header>
 
-  <main class="p-4 py-12">
+  <main class="p-4 md:mx-12 lg:mx-24 xl:mx-48 2xl:mx-72">
     <section id="aboutme" class="flex flex-col">
       <h4 class="text-2xl border-b-2">About Me</h4>
 
@@ -66,7 +64,7 @@
           </p>
         </div>
         <div class="flex flex-col pt-4 gap-y-2">
-          <h5 class="text-lg border-b-2">Skills</h5>
+          <h5 class="text-lg">Skills</h5>
           <p>
             <a href="http://reactjs.org">react</a>,
             <a href="https://tailwindcss.com">tailwindcss</a>,
@@ -87,8 +85,8 @@
     <section id="experience" class="flex flex-col mt-4">
       <h4 class="text-2xl border-b-2 mb-2">Work Experience</h4>
 
-      <div class="grid grid-cols-1">
-        <div class="bg-red-300 rounded-lg p-4">
+      <div class="grid grid-cols-1 gap-2">
+        <div class="border rounded-lg p-4">
           <h5 class="text-xl">
             <a href="https://www.cbhs.com.au/" target="_blank">CBHS Health Fund Limited</a>
           </h5>
@@ -113,37 +111,26 @@
           </ul>
         </div>
 
-        <div>
-          <div>
-            <div>
-              <h5>
-                <a href="http://effision.com/" target="_blank">
-                  EFFISION
-                </a>
-              </h5>
-            </div>
+        <div class="border rounded-lg p-4">
+          <h5 class="text-xl">
+            <a href="http://effision.com/" target="_blank">
+              EFFISION
+            </a>
+          </h5>
+          <div class="flex justify-between flex-col md:flex-row ">
+            <h6 class="text-lg">Solutions Developer</h6>
+            <h6 class="text-lg">2015 - 2016</h6>
           </div>
-          <div>
-            <div>
-              <h6>Solutions Developer</h6>
-            </div>
-            <div>
-              <h6>2015 - 2016</h6>
-            </div>
-          </div>
-          <div>
-            <div>
-              <ul>
-                <li>
-                  Worked on developing and maintaining insurance underwriting portal, build on ASP.NET
-                </li>
-                <li>
-                  Built POSFLO a Point of Sale and media distribution mobile app using AngularJS and ionic
-                </li>
-              </ul>
-            </div>
-          </div>
+          <ul class="flex flex-col gap-y-2">
+            <li>
+              Worked on developing and maintaining insurance underwriting portal, build on ASP.NET
+            </li>
+            <li>
+              Built POSFLO a Point of Sale and media distribution mobile app using AngularJS and ionic
+            </li>
+          </ul>
         </div>
+
         <!--
         <div >
           <div >
@@ -157,10 +144,10 @@
           </div>
           <div >
             <div >
-              <h6>Software Developer</h6>
+              <h6 class="text-lg">Software Developer</h6>
             </div>
             <div >
-              <h6>2014</h6>
+              <h6 class="text-lg">2014</h6>
             </div>
           </div>
         -->
@@ -183,115 +170,76 @@
           </div>
           <div >
             <div >
-              <h6>Solutions Architect</h6>
+              <h6 class="text-lg">Solutions Architect</h6>
             </div>
             <div >
-              <h6>2014</h6>
+              <h6 class="text-lg">2014</h6>
             </div>
           </div>
         </div>
 -->
-        <div>
-          <div>
-            <div>
-              <h5><a href="https://www.capgemini.com/">Capgemini</a></h5>
-            </div>
+
+        <div class="border rounded-lg p-4">
+          <h5 class="text-xl"><a href="https://www.capgemini.com/">Capgemini</a></h5>
+          <div class="flex justify-between flex-col md:flex-row ">
+            <h6 class="text-lg">Manager, Technical Lead, Sr. Consultant</h6>
+            <h6 class="text-lg">2008 - 2014</h6>
           </div>
-          <div>
-            <div>
-              <h6>Manager, Technical Lead, Sr. Consultant</h6>
-            </div>
-            <div>
-              <h6>2008 - 2014</h6>
-            </div>
-          </div>
-          <div>
-            <div>
-              <ul>
-                <li>
-                  Worked as Microsoft Azure and MS.NET Technology Lead / Technical Architect
-                </li>
-                <li>
-                  Worked on building scalable backend APIs for hangout and social events app on MS Azure
-                </li>
-                <li>
-                  Led teams for Level 2 and Level 3 support, which was responsible for handling direct customer queries and helping them to complete business processes
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div>
-            <div>
-              Couple of assignment is Switzerland and France.
-            </div>
-          </div>
+          <ul class="flex flex-col gap-y-2">
+            <li>
+              Worked as Microsoft Azure and MS.NET Technology Lead / Technical Architect
+            </li>
+            <li>
+              Worked on building scalable backend APIs for hangout and social events app on MS Azure
+            </li>
+            <li>
+              Led teams for Level 2 and Level 3 support, which was responsible for handling direct customer queries and helping them to complete business processes
+            </li>
+            <li>Couple of assignment is Switzerland and France.</li>
+          </ul>
         </div>
 
-        <div>
-          <div>
-            <div>
-              <h5>3 Global Services (now <a href="http://www.techmbs.in/"> Tech Mahindra Business Services</a>)</h5>
-            </div>
+        <div class="border rounded-lg p-4">
+          <h5 class="text-xl">3 Global Services (now <a href="http://www.techmbs.in/"> Tech Mahindra Business Services</a>)</h5>
+          <div class="flex justify-between flex-col md:flex-row ">
+            <h6 class="text-lg">Project Lead, Sr. Developer</h6>
+            <h6 class="text-lg">2005 - 2008</h6>
           </div>
-          <div>
-            <div>
-              <h6>Project Lead, Sr. Developer</h6>
-            </div>
-            <div>
-              <h6>2005 - 2008</h6>
-            </div>
-          </div>
-          <div>
-            <div>
-              <ul>
-                <li>
-                  Helped to setup the SDLC process, which included minimum documentation for new application development, set code review guidelines and other quality processes
-                </li>
-                <li>
-                  Led projects through various stages of requirement gathering, project planning, writing technical specifications, development, testing and support
-                </li>
-                <li>
-                  Worked as a trainer to conduct ASP.NET (new features) training for the team, which helped developers to quickly learn and implement new features in upcoming projects
-                </li>
-              </ul>
-            </div>
-          </div>
+          <ul>
+            <li>
+              Helped to setup the SDLC process, which included minimum documentation for new application development, set code review guidelines and other quality processes
+            </li>
+            <li>
+              Led projects through various stages of requirement gathering, project planning, writing technical specifications, development, testing and support
+            </li>
+            <li>
+              Worked as a trainer to conduct ASP.NET (new features) training for the team, which helped developers to quickly learn and implement new features in upcoming projects
+            </li>
+          </ul>
         </div>
 
-        <div>
+        <div class="border rounded-lg p-4 flex flex-col gap-y-4">
           <div>
-            <div>
-              <h5>
-                <a href="https://www.aurionpro.com/">
-                  aurionpro
-                </a>
-              </h5>
+            <h5 class="text-xl">
+              <a href="https://www.aurionpro.com/">
+                aurionpro
+              </a>
+            </h5>
+            <div class="flex justify-between flex-col md:flex-row ">
+              <h6 class="text-lg">Software Developer</h6>
+              <h6 class="text-lg">2004 - 2005</h6>
             </div>
           </div>
-          <div>
-            <div>
-              <h6>Software Developer</h6>
-            </div>
-            <div>
-              <h6>2004 - 2005</h6>
-            </div>
-          </div>
-          <br>
-          <div>
-            <div>
-              <h5>IT PEOPLE/Orient Information Technology</h5>
-            </div>
-          </div>
-          <div>
-            <div>
-              <h6>Trainee Software Developer</h6>
-            </div>
-            <div>
-              <h6>2003 - 2004</h6>
-            </div>
-          </div>
-        </div>
 
+          <div>
+            <h5 class="text-xl">IT PEOPLE/Orient Information Technology</h5>
+            <div class="flex justify-between flex-col md:flex-row ">
+              <h6 class="text-lg">Trainee Software Developer</h6>
+              <h6 class="text-lg">2003 - 2004</h6>
+            </div>
+          </div>
+
+        </div>
         <!-- <div>
         <h4 >Side projects</h4>
         <div>
@@ -319,11 +267,10 @@
     <section id="contact" class="mt-4">
       <div>
         <h4 class="text-2xl border-b-2">Contact Me</h4>
-
-        <div class="flex sm:flex-col sm:justify-start md:flex-row md:justify-between">
+        <div>
           <div>
             <h5>
-              <!-- <i></i> -->
+              <i></i>
               <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a>
             </h5>
           </div>
@@ -334,20 +281,6 @@
               <a href="tel:+61466098915">0466 098 915</a>
             </h5>
           </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div>
-      <div>
-        <div>
-          <h4>
-            <i></i>
-            Coordinates
-          </h4>
-          <p>Australia</p>
         </div>
         <div>
           <ul>
@@ -369,12 +302,20 @@
           </ul>
         </div>
       </div>
+    </section>
+  </main>
+
+  <footer>
+    <div>
+      <h4>
+        <i></i>
+        Coordinates
+      </h4>
+      <p>Australia</p>
     </div>
 
     <div>
-      <div>
-        <small>&copy; Prashant Kurlekar <span id="currentYear"></span></small>
-      </div>
+      <small>&copy; Prashant Kurlekar <span id="currentYear"></span></small>
     </div>
   </footer>
 
