--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
 </head>
 
 <body id="page-top" class="font-nunito">
-  <nav class="bg-gray-100 py-4">
+  <nav class="bg-gray-100 py-4 sticky top-0 z-50">
     <div class="flex justify-between items-center">
       <div>
         <h1 class="font-semibold text-xl md:text-3xl pl-4 md:mx-12 lg:mx-24 xl:mx-48 2xl:mx-72">
           <a href="#page-top">Prashant Kurlekar</a>
         </h1>
       </div>
-      <ul class="hidden">
-        <li>
-          <a href="#aboutme">About Me</a>
-        </li>
+      <div class="hidden sm:block">
+        <div class="flex flex-row gap-x-2 pr-4">
+          <div class="pr-4 rounded-lg py-2 px-2 uppercase text-xs font-bold cursor-pointer tracking-wider hover:bg-gray-500 hover:text-black-100 transition ease-out duration-500">
+            <a href="#aboutme">About Me</a>
+          </div>
 
-        <li>
-          <a href="#workExperience">Work Experience</a>
-        </li>
+          <div class="pr-4 rounded-lg py-2 px-2 uppercase text-xs font-bold cursor-pointer tracking-wider hover:bg-gray-500 hover:text-black-100 transition ease-out duration-500">
+            <a href="#workExperience">Work Experience</a>
+          </div>
 
-        <li>
-          <a href="#contact">Contact</a>
-        </li>
-      </ul>
+          <div class="pr-4 rounded-lg py-2 px-2 uppercase text-xs font-bold cursor-pointer tracking-wider hover:bg-gray-500 hover:text-black-100 transition ease-out duration-500">
+            <a href="#contact">Contact</a>
+          </div>
+        </div>
+      </div>
     </div>
   </nav>
 
