added spacing for work exp

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img src="img/PrashantKurlekarAvatar-2008.jpg" alt="Prashant Kurlekar" class="rounded-2xl shadow-2xl mt-4 h-36 sm:h-48 md:h-60 lg:h-72">
         <!-- <h3 class="text-lg pt-2">Prashant Kurlekar</h3> -->
       </div>
-      <h4 class="pt-4">Frontend / Full Stack(.NET)</h4>
+      <h4 class="pt-4">Frontend / Full Stack .NET Developer</h4>
     </div>
   </header>
 
@@ -222,7 +222,7 @@
             <h6 class="text-lg">Project Lead, Sr. Developer</h6>
             <h6 class="text-lg">2005 - 2008</h6>
           </div>
-          <ul>
+          <ul class="flex flex-col gap-y-2">
             <li>
               Helped to setup the SDLC process, which included minimum documentation for new application development, set code review guidelines and other quality processes
             </li>
