word + experience changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h4 class="text-2xl border-b-2">About Me</h4>
 
       <div class="p-2">
-        <div class="flex flex-col gap-y-2">
+        <!-- <div class="flex flex-col gap-y-2">
           <p>
             A Software developer with <span id="experience"></span>+ years of experience, I have worked at large software consulting organisations as well as small startups. Proficient in Full Stack (.NET) development, my expertise lies in building mobile applications and mobile first websites with scalable backend APIs.
           </p>
@@ -79,21 +79,29 @@
           <p>
             I have worked on projects for diverse domains like Social Networking, Telecom, e-Commerce, HealthCare and Media Distribution
           </p>
+        </div> -->
+        <div class="flex flex-col gap-y-2">
+          <p>I have been developing software for <span id="experience"></span>+ years and have good experience building various projects. I enjoy learning new things, and I am always looking for new challenges. I have worked at large software consulting organisations and small startups.</p>
+          <p>Proficient in Full Stack (.NET) development, my expertise lies in building mobile applications and mobile first websites with scalable backend APIs.</p>
         </div>
         <div class="flex flex-col pt-4 gap-y-1">
           <h5 class="text-lg">Skills</h5>
           <p>
-            <a href="http://reactjs.org">react</a>,
+            <a href="http://reactjs.org">React</a>,
+            <a href="https://angular.io">Angular</a>,
+            JavaScript, TypeScript,
             <a href="https://tailwindcss.com">tailwindcss</a>,
-            <a href="https://ionicframework.com">ionic</a>,
-            <a href="https://angular.io">angular</a>
-            <!-- , <a href="https://getbootstrap.com/">Bootstrap</a> -->
+            <a href="https://getbootstrap.com/">Bootstrap</a>,
+          </p>
+          <p>React Native, <a href="https://ionicframework.com">Ionic Framework(with Cordova/Capacitor)</a>, </p>
+          <p>
+            .NET(core), C#, ASP.NET,
           </p>
           <p>
-            .NET, SQL Server, C#, JavaScript, TypeScript
+            Microsoft Azure, Microsoft SQL Server, Identity Server, Entity Framework, Git
           </p>
           <p>
-            Microsoft Azure, Identity Server, Entity Framework
+            Agile/Scrum
           </p>
         </div>
       </div>
@@ -285,24 +293,20 @@
       <h4 class="text-2xl border-b-2">Contact Me</h4>
       <div class="flex flex-col sm:flex-row justify-between pt-2">
         <div>
-          <h5 class="flex flex-row gap-x-2">
-            <a href="mailto:prashantkurlekar@gmail.com">
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" class="w-6" viewBox="0 0 512 512">
+          <h5>
+            <a href="mailto:prashantkurlekar+personal@gmail.com" class="flex flex-row gap-x-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-6" viewBox="0 0 512 512">
                 <rect x="48" y="96" width="416" height="320" rx="40" ry="40" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" />
                 <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M112 160l144 112 144-112" />
-              </svg> -->
-              <span>prashantkurlekar@gmail.com</span>
+              </svg>
+              <span>Email Me</span>
             </a>
           </h5>
-          <h5>
+          <!-- <h5>
             <a href="tel:+61466098915" class="flex flex-row gap-1">
-              <!-- <svg xmlns="http://www.w3.org/2000/svg" class="w-6" viewBox="0 0 512 512">
-                <rect x="128" y="16" width="256" height="480" rx="48" ry="48" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" />
-                <path d="M176 16h24a8 8 0 018 8h0a16 16 0 0016 16h64a16 16 0 0016-16h0a8 8 0 018-8h24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" />
-              </svg> -->
               <span>0466 098 915</span>
             </a>
-          </h5>
+          </h5> -->
         </div>
         <div>
           <ul class="flex flex-row gap-x-2 pr-4">
