tailwind tree shaking with cli

--- a/index.html
+++ b/index.html
@@ -10,23 +10,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap');
   </style>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            twitter: "#26a7de",
-            linkedin: "#0072b1",
-            github: "#171515"
-          },
-          fontFamily: {
-            nunito: ['Nunito', 'sans-serif'],
-          },
-        }
-      }
-    }
-  </script>
+  <link href="output.css" rel="stylesheet">
 </head>
 
 <body id="page-top" class="font-nunito">
