--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li>
               Maintaining
               <a href="https://www.cbhs.com.au" target="_blank">CBHS Health Fund</a>,
-              <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> and <a href="https://www.cbhsinternationalhealth.com.au/">CBHS International Health</a> websites build on .NET and Sitefinity.
+              <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> and <a href="https://www.cbhsinternationalhealth.com.au/">CBHS International Health</a> websites build on React, .NET and Sitefinity.
             </li>
             <li>
               Training developers on ionic, angular, .NET Core and Clean Code principles
