--- a/index.html
+++ b/index.html
@@ -97,6 +97,30 @@
 
     <section id="workExperience" class="flex flex-col mt-4">
       <h4 class="text-2xl border-b-2 mb-2">Work Experience</h4>
+      
+      <div class="border rounded-lg p-4">
+          <h5 class="text-xl">
+            <a href="http://effision.com/" target="_blank">
+              NSW eHealth
+            </a>
+          </h5>
+          <div class="flex justify-between flex-col md:flex-row ">
+            <h6 class="text-lg">Senior Developer</h6>
+            <h6 class="text-lg">2022 - ...</h6>
+          </div>
+          <ul class="flex flex-col gap-y-2">
+            <li>
+              Working on a new web app built using Angular, ASP.NET, and Azure Cognitive Search.
+            </li>
+            <li>
+              Responsibilities include building UI and supporting APIs
+            </li>
+            
+            <li>
+              Setting up process TDD for the frontend application
+            </li>
+          </ul>
+        </div>
 
       <div class="grid grid-cols-1 gap-y-4">
         <div class="border rounded-lg p-4">
@@ -105,7 +129,7 @@
           </h5>
           <div class="flex justify-between flex-col md:flex-row ">
             <h6 class="text-lg">Mobile App / Web Developer</h6>
-            <h6 class="text-lg">2016 - ...</h6>
+            <h6 class="text-lg">2016 - 2021</h6>
           </div>
           <ul class="flex flex-col gap-y-2">
             <li>
