--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </li>
             
             <li>
-              Setting up process TDD for the frontend application
+              Setting up TDD process for the frontend application
             </li>
           </ul>
         </div>
