--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
             <li>
               Responsibilities include building UI and supporting APIs
             </li>
-            
             <li>
-              Setting up TDD process for the frontend application
+              Setting up the TDD process for the frontend application
             </li>
           </ul>
         </div>
