Update index.html with experience and work experience details

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
           </p>
         </div> -->
         <div class="flex flex-col gap-y-2">
-          <p>I have been developing software for <span id="experience"></span>+ years and my expertise lies in building mobile applications and websites with scalable backend APIs.</p>
-          <p>I have worked at large software consulting organisations and small startups. I enjoy learning new things, and I am always looking for new challenges.</p>
+          <!-- <p>I have been developing software for <span id="experience"></span>+ years and my expertise lies in building mobile applications and websites with scalable backend APIs.</p>
+          <p>I have worked at large software consulting organisations and small startups. I enjoy learning new things, and I am always looking for new challenges.</p> -->
+          I possess over 21 years of experience in software development, specializing in the creation of mobile applications and websites with robust, scalable back-end APIs. Throughout my career, I have thrived in both large software consulting firms and dynamic startup environments. I am a passionate learner who continually seeks out new opportunities and challenges to further my expertise.
         </div>
         <div class="flex flex-col pt-4 gap-y-1">
           <h5 class="text-lg">Skills</h5>
@@ -83,10 +84,10 @@
           </p>
           <p>React Native, <a href="https://ionicframework.com">Ionic Framework(with Cordova/Capacitor)</a>, </p>
           <p>
-            .NET(core), C#, ASP.NET,
+            .NET, C#, ASP.NET, NodeJS,
           </p>
           <p>
-            Microsoft Azure, Microsoft SQL Server, Identity Server, Entity Framework, Git
+            Microsoft Azure, Microsoft SQL Server, Identity Server, Entity Framework, Git, AWS, MongoDB
           </p>
           <p>
             Agile/Scrum
@@ -97,16 +98,17 @@
 
     <section id="workExperience" class="flex flex-col mt-4">
       <h4 class="text-2xl border-b-2 mb-2">Work Experience</h4>
-      
-      <div class="border rounded-lg p-4">
+
+      <div class="grid grid-cols-1 gap-y-4">
+        <div class="border rounded-lg p-4">
           <h5 class="text-xl">
             <a href="https://www.ehealth.nsw.gov.au" target="_blank">
-              NSW eHealth
+              Transport for NSW
             </a>
           </h5>
           <div class="flex justify-between flex-col md:flex-row ">
             <h6 class="text-lg">Senior Developer</h6>
-            <h6 class="text-lg">2022 - ...</h6>
+            <h6 class="text-lg">2023 - ...</h6>
           </div>
           <ul class="flex flex-col gap-y-2">
             <li>
@@ -121,7 +123,29 @@
           </ul>
         </div>
 
-      <div class="grid grid-cols-1 gap-y-4">
+        <div class="border rounded-lg p-4">
+          <h5 class="text-xl">
+            <a href="https://www.ehealth.nsw.gov.au" target="_blank">
+              NSW eHealth
+            </a>
+          </h5>
+          <div class="flex justify-between flex-col md:flex-row ">
+            <h6 class="text-lg">Senior Developer</h6>
+            <h6 class="text-lg">2022</h6>
+          </div>
+          <ul class="flex flex-col gap-y-2">
+            <li>
+              Worked on a new web app built using Angular, ASP.NET, and Azure Cognitive Search.
+            </li>
+            <li>
+              Responsibilities include building UI and supporting APIs
+            </li>
+            <li>
+              Setting up the TDD process for the frontend application
+            </li>
+          </ul>
+        </div>
+
         <div class="border rounded-lg p-4">
           <h5 class="text-xl">
             <a href="https://www.cbhs.com.au/" target="_blank">CBHS Health Fund Limited</a>
